# docs/swagger.yaml
@@ -178,6 +178,15 @@ definitions:
       username:
         type: string
     type: object
+  entity.Follower:
+    properties:
+      followed:
+        type: boolean
+      follower_id:
+        type: string
+      following_id:
+        type: string
+    type: object
   entity.HoursOfOperation:
     properties:
       friday:
@@ -239,6 +248,34 @@ definitions:
       notifications:
         items:
           $ref: '#/definitions/entity.Notification'
+        type: array
+    type: object
+  entity.Promotion:
+    properties:
+      created_at:
+        type: string
+      description:
+        type: string
+      discount_percentage:
+        type: integer
+      expires_at:
+        type: string
+      id:
+        type: string
+      started_at:
+        type: string
+      title:
+        type: string
+      user_id:
+        type: string
+    type: object
+  entity.PromotionGetList:
+    properties:
+      count:
+        type: integer
+      items:
+        items:
+          $ref: '#/definitions/entity.Promotion'
         type: array
     type: object
   entity.RegisterRequest:
@@ -357,6 +394,28 @@ definitions:
     properties:
       message:
         type: string
+    type: object
+  entity.Tag:
+    properties:
+      created_at:
+        type: string
+      id:
+        type: string
+      level:
+        type: integer
+      slug:
+        type: string
+      updated_at:
+        type: string
+    type: object
+  entity.TagList:
+    properties:
+      count:
+        type: integer
+      items:
+        items:
+          $ref: '#/definitions/entity.Tag'
+        type: array
     type: object
   entity.Url:
     properties:
@@ -646,6 +705,7 @@ paths:
       - description: search
         in: query
         name: search
+        required: true
         type: string
       produces:
       - application/json
@@ -924,7 +984,7 @@ paths:
     get:
       consumes:
       - application/json
-      description: Get a list of users
+      description: Get a list of businesses
       parameters:
       - description: page
         in: query
@@ -953,7 +1013,47 @@ paths:
             $ref: '#/definitions/entity.ErrorResponse'
       security:
       - BearerAuth: []
-      summary: Get a list of users
+      summary: Get a list of businesses
+      tags:
+      - business
+  /business/upload/{id}:
+    post:
+      consumes:
+      - multipart/form-data
+      description: Upload Multiple Files
+      operationId: upload_business_pic_file
+      parameters:
+      - description: Business attachment id
+        in: path
+        name: id
+        required: true
+        type: string
+      - collectionFormat: csv
+        description: File to upload
+        in: formData
+        items:
+          type: file
+        name: file
+        required: true
+        type: array
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Success Request
+          schema:
+            $ref: '#/definitions/entity.MultipleFileUploadResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/entity.ErrorResponse'
+        "500":
+          description: Server error
+          schema:
+            $ref: '#/definitions/entity.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Upload Multiple Files
       tags:
       - business
   /event:
@@ -1260,6 +1360,74 @@ paths:
       summary: Delete File
       tags:
       - Upload File
+  /follower:
+    post:
+      consumes:
+      - application/json
+      description: Create/Delete a follower
+      parameters:
+      - description: Follower object
+        in: body
+        name: follower
+        required: true
+        schema:
+          $ref: '#/definitions/entity.Follower'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/entity.Follower'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/entity.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Create/Delete a follower
+      tags:
+      - follower
+  /follower/list:
+    get:
+      consumes:
+      - application/json
+      description: Get a list of followers
+      parameters:
+      - description: page
+        in: query
+        name: page
+        required: true
+        type: number
+      - description: limit
+        in: query
+        name: limit
+        required: true
+        type: number
+      - description: following_id
+        in: query
+        name: following_id
+        type: string
+      - description: search
+        in: query
+        name: search
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/entity.UserList'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/entity.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Get a list of followers
+      tags:
+      - follower
   /notification:
     post:
       consumes:
@@ -1460,6 +1628,123 @@ paths:
       summary: Update status a notification by ID
       tags:
       - notification
+  /promotion:
+    post:
+      consumes:
+      - application/json
+      description: Create a new promotion
+      parameters:
+      - description: Promotion object
+        in: body
+        name: promotion
+        required: true
+        schema:
+          $ref: '#/definitions/entity.Promotion'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/entity.Promotion'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/entity.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Create a new promotion
+      tags:
+      - promotion
+  /promotion/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Delete a promotion
+      parameters:
+      - description: Promotion ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/entity.SuccessResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/entity.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Delete a promotion
+      tags:
+      - promotion
+    get:
+      consumes:
+      - application/json
+      description: Get a promotion by ID
+      parameters:
+      - description: Promotion ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/entity.Promotion'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/entity.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Get a promotion by ID
+      tags:
+      - promotion
+  /promotion/list:
+    get:
+      consumes:
+      - application/json
+      description: Get a list of promotions
+      parameters:
+      - description: page
+        in: query
+        name: page
+        required: true
+        type: number
+      - description: limit
+        in: query
+        name: limit
+        required: true
+        type: number
+      - description: search
+        in: query
+        name: search
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/entity.PromotionGetList'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/entity.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Get a list of promotions
+      tags:
+      - promotion
   /report:
     post:
       consumes:
@@ -1865,6 +2150,150 @@ paths:
       summary: Get a list of users
       tags:
       - session
+  /tag:
+    post:
+      consumes:
+      - application/json
+      description: Create a tag
+      parameters:
+      - description: Tag object
+        in: body
+        name: tag
+        required: true
+        schema:
+          $ref: '#/definitions/entity.Tag'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/entity.Tag'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/entity.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Create a tag
+      tags:
+      - tag
+    put:
+      consumes:
+      - application/json
+      description: Update a tag
+      parameters:
+      - description: Tag object
+        in: body
+        name: tag
+        required: true
+        schema:
+          $ref: '#/definitions/entity.Tag'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/entity.Tag'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/entity.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Update a tag
+      tags:
+      - tag
+  /tag/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Delete a tag
+      parameters:
+      - description: Tag ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/entity.SuccessResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/entity.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Delete a tag
+      tags:
+      - tag
+    get:
+      consumes:
+      - application/json
+      description: Get a tag by ID
+      parameters:
+      - description: Tag ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/entity.Tag'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/entity.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Get a tag by ID
+      tags:
+      - tag
+  /tag/list:
+    get:
+      consumes:
+      - application/json
+      description: Get a list of users
+      parameters:
+      - description: page
+        in: query
+        name: page
+        required: true
+        type: number
+      - description: limit
+        in: query
+        name: limit
+        required: true
+        type: number
+      - description: search
+        in: query
+        name: search
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/entity.TagList'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/entity.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Get a list of users
+      tags:
+      - tag
   /user:
     post:
       consumes:
@@ -2007,6 +2436,41 @@ paths:
       security:
       - BearerAuth: []
       summary: Get a list of users
+      tags:
+      - user
+  /user/upload:
+    post:
+      consumes:
+      - multipart/form-data
+      description: Upload Multiple Files
+      operationId: upload_profile_pic_file
+      parameters:
+      - collectionFormat: csv
+        description: File to upload
+        in: formData
+        items:
+          type: file
+        name: file
+        required: true
+        type: array
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Success Request
+          schema:
+            $ref: '#/definitions/entity.MultipleFileUploadResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/entity.ErrorResponse'
+        "500":
+          description: Server error
+          schema:
+            $ref: '#/definitions/entity.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Upload Multiple Files
       tags:
       - user
 securityDefinitions:
