# internal/entity/follower.go
@@ -1,7 +1,7 @@
 package entity
 
 type Follower struct {
-	FollowingId string `json:"follwing_id"`
+	FollowingId string `json:"following_id"`
 	FollowerId  string `json:"follower_id"`
 	UnFollowed  bool   `json:"followed"`
 }
